# MCS

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
include/: rtp.h  stream_protocol.h  udp.h  udp.hpp  udp_unix.h  udp_windows.h  util.hpp
src/: client.cpp  dev.cpp  rtp.cpp  server.cpp  stream_protocol.cpp  udp.cpp  udp_unix.cpp  udp_windows.cpp
test/: rtp.cc
